# road-to-cpp

./: README.md
Modules/: CMakeLists.txt
Modules/Submodules/Test/: CMakeLists.txt
Modules/Submodules/Test/private/: Fumetto.cpp  Libreria.cpp  Libro.cpp  LibroNormale.cpp  Rivista.cpp  main.cpp
Modules/Submodules/Test/public/: Fumetto.h  Libreria.h  Libro.h  LibroNormale.h  Rivista.h  SharedPtrExample.h
Modules~2/Submodules/Test/: CMakeLists.txt
Modules~2/Submodules/Test/dati/: libreria.csv
Modules~2/Submodules/Test/private/: Armato.cpp  ManiNude.cpp  Oggetto.cpp  Personaggio.cpp  main.cpp
Modules~2/Submodules/Test/public/: Armato.h  ManiNude.h  Oggetto.h  Personaggio.h
Test/private/: Libreria.cpp  main.cpp
Test/public/: Libro.h
